# hassio-addons-avm

./: .gitignore  LICENSE.md  Makefile  README.md  repository.json  requirements.txt
.github/: FUNDING.yml  paths-filter.yml
.github/linters/: .gitleaks.toml
.github/workflows/: archived_lint-checks.yaml  daily_stale.yml  helper_stats_graphs.yaml  lint.yaml  on_issues.yml  onpr_automerge.yaml  onpr_check-pr.yaml  onpush_builder.yaml  onpush_superlinter.yml  repository-updater.yaml  translations-download.yaml  translations-upload.yaml  weekly_addons_updater  weekly_bashbeautify.yaml  weekly_sortjson.yaml  weekly_stats.yaml
.templates/: .README.md  00-aaa_dockerfile_backup.sh  00-banner.sh  00-smb_mounts.sh  01-config_yaml.sh  01-custom_script.sh  config.template  ha_autoapps.sh  ha_automodules.sh  script.template
apache2/: CHANGELOG.md  README.md  config.json
apache2-minimal/: CHANGELOG.md  config.json
base_docker_images/: build_local.sh
base_docker_images/python/3.11/: Dockerfile  Makefile
bash_script_executer/: CHANGELOG.md  README.md  config.json
blank-fastapi-vue-hassio/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  _Dockerfile  config.json  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
blank-fastapi-vue-hassio/src/: main.py
gitea/: Dockerfile  README.md  config.json  updater.json
postgres/: CHANGELOG.md  build.json  updater.json
wiki.js/: CHANGELOG.md  README.md  config.json
