[project]
name = "blank-fastapi-vue-hassion"
version = "0.1.0"
description = "Blank FastAPI + Vue.js template for Home Assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.11",
    "uvicorn (>=0.34.0,<0.35.0)",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

# ==== pytest ====
[tool.pytest.ini_options]
asyncio_mode = "auto"
minversion = "6.0"
pythonpath = "./src"
python_files = [
    "tests.py",
    "test_*.py",
]
markers = [
    "unit",
    "api",
    "performance",
    "e2e",
]


[tool.ruff]
target-version = "py311"

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
"__init__.py" = ["F401"]
